objects/Field_Trip__Object_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Field_Trip__Fields__c</fullName>
        <label>Fields</label>
        <summaryForeignKey>Field_Trip__Field_Analysis__c.Field_Trip__Object_Analysis__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Filter__c</fullName>
        <label>Filter</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Last_Analyzed__c</fullName>
        <label>Last Analyzed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Last_Batch_Id__c</fullName>
        <label>Last Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Record_Types__c</fullName>
        <label>Record Types</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Records__c</fullName>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__Tally__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tally (Temporary)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Trip__isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Trip</label>
    <listViews>
        <fullName>Field_Trip__All_Field_Trips</fullName>
        <columns>NAME</columns>
        <columns>Field_Trip__Object_Label__c</columns>
        <columns>Field_Trip__isCustom__c</columns>
        <columns>Field_Trip__Fields__c</columns>
        <columns>Field_Trip__Records__c</columns>
        <columns>Field_Trip__Last_Analyzed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Field Trips</label>
    </listViews>
    <listViews>
        <fullName>Field_Trip__Analyzed_Past_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Field_Trip__Object_Label__c</columns>
        <columns>Field_Trip__Filter__c</columns>
        <columns>Field_Trip__Fields__c</columns>
        <columns>Field_Trip__Last_Analyzed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Trip__Last_Analyzed__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Analyzed Past 30 Days</label>
    </listViews>
    <listViews>
        <fullName>Field_Trip__Custom_Object_Field_Trips</fullName>
        <columns>NAME</columns>
        <columns>Field_Trip__Object_Label__c</columns>
        <columns>Field_Trip__Filter__c</columns>
        <columns>Field_Trip__Fields__c</columns>
        <columns>Field_Trip__Last_Analyzed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Trip__isCustom__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Custom Object Field Trips</label>
    </listViews>
    <listViews>
        <fullName>Field_Trip__Standard_Object_Field_Trips</fullName>
        <columns>NAME</columns>
        <columns>Field_Trip__Object_Label__c</columns>
        <columns>Field_Trip__Filter__c</columns>
        <columns>Field_Trip__Fields__c</columns>
        <columns>Field_Trip__Last_Analyzed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Trip__isCustom__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Standard Object Field Trips</label>
    </listViews>
    <listViews>
        <fullName>Osttraa</fullName>
        <columns>NAME</columns>
        <columns>Field_Trip__Last_Analyzed__c</columns>
        <columns>Field_Trip__Records__c</columns>
        <columns>Field_Trip__Object_Name__c</columns>
        <columns>Field_Trip__Record_Types__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Field_Trip__isCustom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>OSTTRA</value>
        </filters>
        <label>Osttraa</label>
    </listViews>
    <nameField>
        <label>Field Trip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Trip</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>